# devdeck

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
.claude/rules/: release-process.md
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
src/: App.tsx  actions.rs  app.rs  git.rs  main.rs  models.rs  storage.rs  theme.rs  types.ts  update.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  git.rs  lib.rs  main.rs  models.rs
src/components/: ProjectRow.tsx
src/lib/: api.ts
