[package]
name = "devdeck"
version = "0.1.0"
edition = "2021"
description = "Developer Workspace Manager — a fast hub for AI-driven, multi-repo development"
license = "MIT"

[dependencies]
eframe = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rfd = "0.15"

[profile.release]
opt-level = 2
lto = "thin"
strip = true
