[package]
name = "devdeck"
version = "0.2.0"
edition = "2021"
description = "Developer Workspace Manager — a fast hub for AI-driven, multi-repo development"
license = "MIT"
repository = "https://github.com/atman-33/devdeck"

[dependencies]
eframe = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rfd = "0.15"
# rustls-based (no schannel): avoids OS revocation-check failures seen on this network
ureq = { version = "2", features = ["json"] }

[profile.release]
opt-level = 2
lto = "thin"
strip = true
